--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  
   <modelVersion>4.0.0</modelVersion>
-  
+
   <packaging>jar</packaging>
   
   <groupId>com.kasisoft</groupId>
@@ -32,15 +31,15 @@
     <tag>HEAD</tag>
   </scm>
   
-  <issueManagement>
-    <system>jira</system>
-    <url>https://kasisoft.com/jira/browse/FMX</url>
-  </issueManagement>
-  
   <ciManagement>
     <system>Jenkins</system>
     <url>https://kasisoft.com/ci/job/libs.com.kasisoft.libs.fmx/</url>
   </ciManagement>
+  
+  <issueManagement>
+    <system>jira</system>
+    <url>https://kasisoft.com/jira/browse/FMX</url>
+  </issueManagement>
   
   <developers>
     <developer>
@@ -49,7 +48,7 @@
       <email>daniel.kasmeroglu@kasisoft.net</email>
     </developer>
   </developers>
-  
+    
   <properties>
   
     <java.version>1.8</java.version>
@@ -59,15 +58,20 @@
 
     <!-- versioning: dependencies -->
     <version-cobertura>2.1.1</version-cobertura>
+    <version-findbugs-annotations>2.0.1</version-findbugs-annotations>
+    <version-freemarker>2.3.23</version-freemarker>
     <version-hamcrest>1.3</version-hamcrest>
+    <version-kcl>2.7</version-kcl>
     <version-log4j>1.6.4</version-log4j>
     <version-lombok>1.16.16</version-lombok>
+    <version-slf4j-api>1.7.7</version-slf4j-api>
     <version-testng>6.9.4</version-testng>
     
     <!-- versioning: plugins -->
     <plugin-version-cobertura-maven>2.7</plugin-version-cobertura-maven>
     <plugin-version-maven-bundle>3.3.0</plugin-version-maven-bundle>
     <plugin-version-maven-compiler>3.6.1</plugin-version-maven-compiler>
+    <plugin-version-maven-dependency-plugin>2.10</plugin-version-maven-dependency-plugin>
     <plugin-version-maven-enforcer>1.4.1</plugin-version-maven-enforcer>
     <plugin-version-maven-gpg>1.6</plugin-version-maven-gpg>
     <plugin-version-maven-jar>3.0.2</plugin-version-maven-jar>
@@ -86,6 +90,26 @@
       <artifactId>lombok</artifactId>
       <version>${version-lombok}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.kasisoft</groupId>
+      <artifactId>com.kasisoft.libs.common</artifactId>
+      <version>${version-kcl}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+      <version>${version-findbugs-annotations}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${version-slf4j-api}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <version>${version-freemarker}</version>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
@@ -112,7 +136,9 @@
     <finalName>${project.artifactId}-${project.version}</finalName>
     
     <pluginManagement>
+    
       <plugins>
+      
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -153,15 +179,37 @@
           <artifactId>maven-jar-plugin</artifactId>
           <version>${plugin-version-maven-jar}</version>
         </plugin>
-      <plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
           <version>${plugin-version-maven-enforcer}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>${plugin-version-maven-dependency-plugin}</version>
         </plugin>
       </plugins>
     </pluginManagement>
     
     <plugins>
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default-cli</id>
+            <goals>
+              <goal>analyze-only</goal>
+            </goals>
+            <configuration>
+              <failOnWarning>false</failOnWarning>
+              <ignoreNonCompile>true</ignoreNonCompile>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -194,7 +242,7 @@
           </execution>
         </executions>
       </plugin> 
-      
+    
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -336,18 +384,29 @@
   </reporting>
   
   <distributionManagement>
-
+    <repository>
+      <id>libs-kasisoft</id>
+      <name>libs-kasisoft</name>
+      <url>https://kasisoft.com/artifactory/libs-kasisoft</url>
+    </repository>
     <snapshotRepository>
       <id>libs-kasisoft</id>
       <name>libs-kasisoft</name>
       <url>https://kasisoft.com/artifactory/libs-kasisoft</url>
     </snapshotRepository>
-    
-    <repository>
-      <id>sonatype-nexus-staging</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-    
   </distributionManagement>
+  
+  <repositories>
+    <repository>
+      <id>libs-kasisoft</id>
+      <url>https://kasisoft.com/artifactory/libs-kasisoft</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
   
 </project>
