--- a/pom.xml
+++ b/pom.xml
@@ -385,9 +385,8 @@
   
   <distributionManagement>
     <repository>
-      <id>libs-kasisoft</id>
-      <name>libs-kasisoft</name>
-      <url>https://kasisoft.com/artifactory/libs-kasisoft</url>
+      <id>sonatype-nexus-staging</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
     <snapshotRepository>
       <id>libs-kasisoft</id>
