--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.kasisoft</groupId>
     <artifactId>com.kasisoft.libs.parent-oss</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
   </parent>  
   
   <packaging>jar</packaging>
@@ -144,7 +144,6 @@
     </pluginManagement>
     
     <plugins>
-    
       
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
