--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <packaging>jar</packaging>
   
   <artifactId>com.kasisoft.libs.fmx</artifactId>
-  <version>0.4</version>
+  <version>0.5-SNAPSHOT</version>
 
   <name>FMX :: Kasisoft Freemarker Extension</name>
   <url>https://kasisoft.com/bitbucket/projects/LIBS/repos/com.kasisoft.libs.fmx</url>
