--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,13 @@
 .launch/
 rebel.xml
 */test-output/
-
-/target/
 test-output/
+release.sh
+/target/
+.factorypath
 
+bin/
+.idea/
+
+.attach_pid*
+create-release.txt
