--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
     <log4j.version>2.13.3</log4j.version>
     <lombok.version>1.18.12</lombok.version>
+    <mapstruct-processor.version>1.3.0.Final</mapstruct-processor.version>
     <testng.version>7.3.0</testng.version>
     
     <!-- versioning: plugins -->
@@ -132,6 +133,15 @@
         <scope>test</scope>
       </dependency>
       
+      <!--
+      Only needed for the modularization and indirectly required by lombok 
+      -->
+      <dependency>
+        <groupId>org.mapstruct</groupId>
+        <artifactId>mapstruct-processor</artifactId>
+        <version>${mapstruct-processor.version}</version>
+      </dependency>
+      
     </dependencies>
   </dependencyManagement>
   
@@ -177,13 +187,10 @@
       <artifactId>hamcrest-all</artifactId>
     </dependency>
     
-    <!--
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct-processor</artifactId>
-      <version>1.3.0.Final</version>
     </dependency>
-    -->
 
   </dependencies>
 
