--- a/.github/workflows/gradlen.yml
+++ b/.github/workflows/gradlen.yml
@@ -24,6 +24,13 @@ jobs:
       with:
         java-version: 14
     
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+          
     - name: Build with Maven
       run: mvn -B clean install
       
