--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>0.7-SNAPSHOT</version>
 
   <name>FMX :: Kasisoft Freemarker Extension</name>
-  <url>https://kasisoft.github.io/fmx/</url>
+  <url>https://kasisoft.com/project/fmx/</url>
   <description>Freemarker extension to handle XML based templates</description>
   
   <licenses>
@@ -23,7 +23,7 @@
   </organization>
   
   <scm>
-    <url>https://kasisoft.github.io/fmx</url>
+    <url>https://kasisoft.com/project/fmx/</url>
     <connection>scm:git:https://github.com/kasisoft/fmx.git</connection>
     <developerConnection>scm:git:https://github.com/kasisoft/fmx.git</developerConnection>
   </scm>
@@ -42,7 +42,7 @@
     <developer>
       <id>costamojan</id>
       <name>Daniel Kasmeroglu</name>
-      <email>daniel.kasmeroglu@kasisoft.net</email>
+      <email>daniel.kasmeroglu@kasisoft.com</email>
     </developer>
   </developers>
   
@@ -53,8 +53,8 @@
     <!-- versioning: dependencies -->
     <freemarker.version>2.3.30</freemarker.version>
     <hamcrest.version>1.3</hamcrest.version>
-    <kcl.version>4.2</kcl.version>
     <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
+    <kcl.version>4.2</kcl.version>
     <log4j.version>2.13.3</log4j.version>
     <lombok.version>1.18.12</lombok.version>
     <mapstruct-processor.version>1.3.0.Final</mapstruct-processor.version>
@@ -66,6 +66,7 @@
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+    <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
     <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
     <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
     <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
@@ -97,6 +98,13 @@
       </dependency>
       
       <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>${log4j.version}</version>
+        <scope>test</scope>
+      </dependency>
+      
+      <dependency>
         <groupId>jakarta.validation</groupId>
         <artifactId>jakarta.validation-api</artifactId>
         <version>${jakarta.validation-api.version}</version>
@@ -114,12 +122,6 @@
         <version>${freemarker.version}</version>
       </dependency>
       
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core</artifactId>
-        <version>${log4j.version}</version>
-        <scope>test</scope>
-      </dependency>
       
       <dependency>
         <groupId>org.testng</groupId>
@@ -160,6 +162,11 @@
     </dependency>
     
     <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+    </dependency>
+  
+    <dependency>
       <groupId>jakarta.validation</groupId>
       <artifactId>jakarta.validation-api</artifactId>
     </dependency>
@@ -174,11 +181,6 @@
       <artifactId>freemarker</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-    </dependency>
-  
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
@@ -202,17 +204,48 @@
     
     <pluginManagement>
       <plugins>
-      
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>${maven-gpg-plugin.version}</version>
+        </plugin>
+
         <plugin> 
           <groupId>org.apache.felix</groupId> 
           <artifactId>maven-bundle-plugin</artifactId>
           <version>${maven-bundle-plugin.version}</version>
+          <extensions>true</extensions> 
+          <configuration> 
+            <instructions> 
+              <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName> 
+              <Bundle-Version>${project.version}</Bundle-Version> 
+            </instructions> 
+          </configuration> 
+          <executions>
+            <execution>
+              <id>generate-manifest</id>
+              <phase>compile</phase>
+              <goals>
+                <goal>manifest</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin> 
       
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>${maven-source-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>attach-sources</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>jar-no-fork</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
         
         <plugin>
@@ -245,11 +278,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
+            <showWarnings>true</showWarnings>
             <release>${java.version}</release>
-            <compilerArgs>
-              <arg>--enable-preview</arg>
-            </compilerArgs>
-            <forceJavacCompilerUse>true</forceJavacCompilerUse>
             <parameters>true</parameters>
             <annotationProcessorPaths>
               <annotationProcessorPath>
@@ -281,6 +311,17 @@
         
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>${maven-jar-plugin.version}</version>
+          <configuration>
+            <archive>
+              <addMavenDescriptor>false</addMavenDescriptor>
+            </archive>
+          </configuration>
+        </plugin>
+        
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
@@ -294,13 +335,18 @@
     <plugins>
     
       <plugin> 
-        <groupId>org.apache.felix</groupId> 
+        <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
       </plugin> 
       
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
       </plugin>
       
     </plugins>
@@ -318,6 +364,7 @@
       </activation>
       <build>
         <plugins>
+        
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -329,6 +376,7 @@
               <autoReleaseAfterClose>true</autoReleaseAfterClose>
             </configuration>
           </plugin>
+          
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-release-plugin</artifactId>
@@ -338,10 +386,10 @@
               <mavenExecutorId>forked-path</mavenExecutorId>
             </configuration>
           </plugin>
+          
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>${maven-gpg-plugin.version}</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -352,20 +400,13 @@
               </execution>
             </executions>
           </plugin>
+          
         </plugins>
       </build>
     </profile>
   </profiles>
   
   <distributionManagement>
-    <!--
-    freemarker must be modularized first, so we're not allowing this for now
-    ### 
-    <repository>
-      <id>sonatype-nexus-staging</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-    -->
     <snapshotRepository>
       <id>github</id>
       <url>https://maven.pkg.github.com/kasisoft/fmx</url>
@@ -374,8 +415,8 @@
   
   <repositories>
     <repository>
-       <id>github-kcl</id>
-       <url>https://maven.pkg.github.com/kasisoft/kcl</url>
+       <id>github-fmx</id>
+       <url>https://maven.pkg.github.com/kasisoft/fmx</url>
        <releases>
          <enabled>false</enabled>
        </releases>
