--- a/pom.xml
+++ b/pom.xml
@@ -48,16 +48,16 @@
   
   <properties>
   
-    <java.version>14</java.version>
+    <java.version>11</java.version>
   
     <!-- versioning: dependencies -->
     <freemarker.version>2.3.30</freemarker.version>
     <hamcrest.version>1.3</hamcrest.version>
     <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
-    <kcl.version>4.2</kcl.version>
+    <kcl.version>4.3</kcl.version>
     <log4j.version>2.13.3</log4j.version>
-    <lombok.version>1.18.12</lombok.version>
-    <mapstruct-processor.version>1.3.0.Final</mapstruct-processor.version>
+    <lombok.version>1.18.16</lombok.version>
+    <mapstruct-processor.version>1.4.1.Final</mapstruct-processor.version>
     <testng.version>7.3.0</testng.version>
     
     <!-- versioning: plugins -->
@@ -146,10 +146,21 @@
         <version>${mapstruct-processor.version}</version>
       </dependency>
       
+      <dependency>
+        <groupId>org.mapstruct</groupId>
+        <artifactId>mapstruct-jdk8</artifactId>
+        <version>${mapstruct-processor.version}</version>
+      </dependency>
+        
     </dependencies>
   </dependencyManagement>
   
   <dependencies>
+
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-jdk8</artifactId>
+    </dependency>
   
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -195,7 +206,7 @@
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct-processor</artifactId>
     </dependency>
-
+    
   </dependencies>
 
   <build>
@@ -325,7 +336,13 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
-            <argLine>--enable-preview -Duser.country=DE -Duser.language=de</argLine>
+            <argLine>-Duser.country=DE -Duser.language=de</argLine>
+            <properties>
+              <property>
+                <name>usedefaultlisteners</name>
+                <key>false</key>
+              </property>
+            </properties>
           </configuration>
         </plugin>
         
