--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
   
   <properties>
   
-    <java.version>11</java.version>
+    <java.version>1.8</java.version>
   
     <!-- versioning: dependencies -->
     <freemarker.version>2.3.30</freemarker.version>
@@ -277,8 +277,11 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
+            <fork>true</fork>
+            <compilerVersion>${java.version}</compilerVersion>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
             <showWarnings>true</showWarnings>
-            <release>${java.version}</release>
             <parameters>true</parameters>
             <annotationProcessorPaths>
               <annotationProcessorPath>
